- bug fix with temp folder creation